<resources>
    <string name="app_name">OpenPunkApi</string>
    <string name="title_category">Category</string>
    <string name="title_random">Random</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_favorites">Favorites</string>

    <string name="title_beer_name">Beer Name</string>
    <string name="title_beer_id">100</string>
    <string name="title_beer_tagline">BeerTagline</string>
    <string name="title_beer_description">Description</string>

    <string name="get_random_title">Get Your Random Beer</string>
    <string name="category_bar">Beer combined with...</string>
    <string name="categoryBeer">Beer Name:</string>
    <string name="categoryFood">Food Name:</string>
    <string name="beerDate">First brewed:\n</string>


</resources>
