<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.miklesam.openpunkapi.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.miklesam.openpunkapi.ui.random.RandomFragment"
        android:label="@string/title_random"
        tools:layout="@layout/fragment_random" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.miklesam.openpunkapi.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>